syntax = "proto3";

package hub.pessimist;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "hub/pessimist/params.proto";
import "hub/pessimist/validation_objective.proto";

option go_package = "hub/x/pessimist/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/hub/pessimist/params";
  
  }
  
  // Queries a list of ValidationObjective items.
  rpc ValidationObjective (QueryValidationObjectiveRequest) returns (QueryValidationObjectiveResponse) {
    option (google.api.http).get = "/hub/pessimist/validation_objective/{clientId}";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryValidationObjectiveRequest {
  string clientId = 1;
}

message QueryValidationObjectiveResponse {
  ValidationObjective validationObjective = 1;
}